[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/area1/panorama_area_1.png" type="Texture" id=1]
[ext_resource path="res://images/area1/Panorama-1.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/AudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/TransitionCurtain.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://scenes/Object.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/View.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Subtitles.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Area1.gd" type="Script" id=12]
[ext_resource path="res://images/area1/Panorama_area_2.png" type="Texture" id=13]
[ext_resource path="res://images/area2/Panorama-2-edit.jpg" type="Texture" id=14]
[ext_resource path="res://scripts/Area2.gd" type="Script" id=15]
[ext_resource path="res://images/area2/Panorama-2_area_1t.png" type="Texture" id=16]
[ext_resource path="res://scripts/Area3.gd" type="Script" id=17]
[ext_resource path="res://scripts/Area4.gd" type="Script" id=18]
[ext_resource path="res://images/area1/Panorama-1 (copy).jpg" type="Texture" id=19]
[ext_resource path="res://images/area1/panorama_area_3.png" type="Texture" id=20]
[ext_resource path="res://images/area2/Panorama-2-edit_dark.jpg" type="Texture" id=21]
[ext_resource path="res://images/area2/Panorama-2_area_2.png" type="Texture" id=22]
[ext_resource path="res://images/area2/Panorama-2_area_3t.png" type="Texture" id=23]
[ext_resource path="res://images/area2/Panorama-2_area_4.png" type="Texture" id=24]

[sub_resource type="Environment" id=5]
background_mode = 1
background_energy = 0.0
ambient_light_energy = 0.0

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Areas" type="Spatial" parent="."]

[node name="Area1" type="Spatial" parent="Areas"]
script = ExtResource( 12 )

[node name="ViewLight" parent="Areas/Area1" instance=ExtResource( 8 )]
skeleton = NodePath("../../..")
texture = ExtResource( 2 )

[node name="ViewDark" parent="Areas/Area1" instance=ExtResource( 8 )]
texture = ExtResource( 19 )

[node name="Object1" parent="Areas/Area1" instance=ExtResource( 7 )]
skeleton = NodePath("")
texture = ExtResource( 1 )

[node name="Object2" parent="Areas/Area1" instance=ExtResource( 7 )]
texture = ExtResource( 13 )
object_number = 2

[node name="Object3" parent="Areas/Area1" instance=ExtResource( 7 )]
texture = ExtResource( 20 )
object_number = 3

[node name="Area2" type="Spatial" parent="Areas"]
script = ExtResource( 15 )

[node name="ViewLight" parent="Areas/Area2" instance=ExtResource( 8 )]
skeleton = NodePath("../..")
texture = ExtResource( 14 )

[node name="ViewDark" parent="Areas/Area2" instance=ExtResource( 8 )]
texture = ExtResource( 21 )

[node name="Object1" parent="Areas/Area2" instance=ExtResource( 7 )]
texture = ExtResource( 16 )

[node name="Object2" parent="Areas/Area2" instance=ExtResource( 7 )]
texture = ExtResource( 22 )
object_number = 2

[node name="Object3" parent="Areas/Area2" instance=ExtResource( 7 )]
texture = ExtResource( 23 )
object_number = 3

[node name="Object4" parent="Areas/Area2" instance=ExtResource( 7 )]
texture = ExtResource( 24 )
object_number = 4

[node name="Area3" type="Spatial" parent="Areas"]
script = ExtResource( 17 )

[node name="ViewLight" parent="Areas/Area3" instance=ExtResource( 8 )]

[node name="ViewDark" parent="Areas/Area3" instance=ExtResource( 8 )]

[node name="Area4" type="Spatial" parent="Areas"]
script = ExtResource( 18 )

[node name="ViewLight" parent="Areas/Area4" instance=ExtResource( 8 )]

[node name="ViewDark" parent="Areas/Area4" instance=ExtResource( 8 )]
skeleton = NodePath("../ViewLight")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="TransitionCurtain" parent="." instance=ExtResource( 5 )]

[node name="Subtitles" parent="." instance=ExtResource( 9 )]

[node name="AudioPlayer" parent="." instance=ExtResource( 4 )]

[node name="OmniLight" type="OmniLight" parent="."]
light_specular = 0.0
omni_range = 25.0
omni_attenuation = 1e-05
